[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antigravity-history"
version = "0.0.1"
description = "Export, recover, and analyze your Google Antigravity conversations."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
keywords = ["antigravity", "chat", "export", "conversation", "history", "backup"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
aghistory = "antigravity_history.cli:main"

[project.urls]
Homepage = "https://github.com/neo1027144-creator/antigravity-history"
Repository = "https://github.com/neo1027144-creator/antigravity-history"
Issues = "https://github.com/neo1027144-creator/antigravity-history/issues"
